--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,18 @@
       <artifactId>spring-context</artifactId>
       <version>5.3.22</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>2.7.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.29</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
