--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
       <version>8.0.29</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>2.7.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
