--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Maven ###
 target/
 .mvn/wrapper/maven-wrapper.jar
 **/src/main/**/target/
@@ -33,3 +34,7 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Miscellaneous ###
+draft/
+secrets/
